--- a/calendar/src/main/res/layout/view_calendar.xml
+++ b/calendar/src/main/res/layout/view_calendar.xml
@@ -9,17 +9,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:drawable/divider_horizontal_bright"
-        android:orientation="horizontal"
-        android:showDividers="middle">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/hoursCol"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:divider="@android:drawable/divider_horizontal_bright"
-            android:orientation="vertical"
-            android:showDividers="middle">
+            android:orientation="vertical">
 
             <Space
                 android:layout_width="match_parent"
