--- a/calendar/src/main/res/values/attrs.xml
+++ b/calendar/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
     <attr name="hourHeightMin" format="dimension" />
     <attr name="hourHeightMax" format="dimension" />
     <attr name="eventSpacing" format="dimension" />
+    <attr name="hideHeader" format="boolean" />
 
     <declare-styleable name="AppTheme">
         <attr name="calendarViewStyle" format="reference" />
@@ -28,12 +29,12 @@
     <declare-styleable name="CalendarView">
         <attr name="range" format="enum">
             <enum name="day" value="1" />
-            <enum name="days_3" value="3" />
             <enum name="week" value="7" />
         </attr>
         <attr name="hourHeight" />
         <attr name="hourHeightMin" />
         <attr name="hourHeightMax" />
+        <attr name="hideHeader" />
     </declare-styleable>
 
     <declare-styleable name="DayView">
