- Remove DayView pagination - Able to set min/max and time cycle of timeline

--- a/calendar/src/main/res/layout/view_calendar.xml
+++ b/calendar/src/main/res/layout/view_calendar.xml
@@ -37,11 +37,16 @@
 
         </LinearLayout>
 
-        <com.jonaswanke.calendar.pager.InfiniteViewPager
-            android:id="@+id/pager"
+        <FrameLayout
+            android:id="@+id/container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
+<!--        <com.jonaswanke.calendar.DayView-->
+<!--            android:id="@+id/dayView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1" />-->
 
     </LinearLayout>
 
