--- a/example/src/main/res/values/styles.xml
+++ b/example/src/main/res/values/styles.xml
@@ -27,7 +27,6 @@
     </style>
 
     <style name="Calendar.CalendarViewStyle">
-        <item name="range">day</item>
         <item name="hourHeight">60dp</item>
         <item name="hourHeightMin">40dp</item>
         <item name="hourHeightMax">100dp</item>
@@ -41,6 +40,8 @@
         <item name="eventStackOverlap">400dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingLeft">12dp</item>
+        <item name="startTime">420</item>
+        <item name="endTime">1200</item>
     </style>
 
     <style name="Calendar.EventViewStyle">
@@ -67,5 +68,8 @@
         <item name="hourHeightMax">100dp</item>
         <item name="hourSize">12sp</item>
         <item name="hourColor">#4A4A4A</item>
+        <item name="android:fontFamily">@font/main_font</item>
+        <item name="startTime">420</item>
+        <item name="endTime">1200</item>
     </style>
 </resources>
