--- a/example/src/main/res/values/styles.xml
+++ b/example/src/main/res/values/styles.xml
@@ -47,6 +47,7 @@
         <item name="android:minHeight">14dp</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#EA5236</item>
+        <item name="backgroundColorDefault">#ED0000</item>
         <item name="borderWidth">0dp</item>
         <item name="cornerRadius">8dp</item>
         <item name="titleDefault">@string/event_title_default</item>
